--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         function onDeviceReady() {
 
             // Retrieve image file location from specified source
+  
             navigator.camera.getPicture(uploadPhoto,
                                         function(message) { alert('get picture failed'); },
                                         { quality: 50, 
-                                        destinationType: navigator.camera.DestinationType.FILE_URI,
-                                        sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY }
+                                        destinationType: navigator.camera.DestinationType.FILE_URI}
                                         );
 
         }
