--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html>
   <head>
 	<title>Capture and Upload Photo</title>
+	<meta content="initial-scale=1, maximum-scale=1, user-scalable=0" name="viewport" />
+	<meta name="viewport" content="width=device-width" />
+
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<link rel="stylesheet" href="styles.css" />
 
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+	<script src="jqm.autoComplete-1.5.2-min.js"></script>
+	<script src="code.js"></script>
 	<script type="text/javascript" charset="utf-8">
 
 	var pictureSource;   // picture source
 	var destinationType; // sets the format of returned value
-    var fileURI; // for the upload
+        var fileURI; // for the upload
+        var identifier = 0;
 
 	// Wait for device API libraries to load
 	//
@@ -65,7 +75,7 @@
         	options.mimeType="image/jpeg";
 
         	var params = {};
-        	params.value1 = "test";
+        	params.tag1 = $('#searchField').val();
         	params.value2 = "param";
 
         	options.params = params;
@@ -92,11 +102,88 @@
     
 	</script>
   </head>
-  <body>
-	<button onclick="capturePhoto();">Capture Photo</button> <br>
-	<button onclick="uploadPhoto();">Capture Photo</button> <br>
 
-	<img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+<body>
 
-  </body>
+	<div data-role="page" id="mainPage" data-theme="a">
+
+		<div data-role="header">
+			<h1>m u y ...</h1>
+			<div>
+				<select id="examples" data-mini="true" data-native-menu="false">
+					<option value="index.html">Rocks</option>
+					<option value="book.html">Books</option>
+				</select>
+			</div>
+		</div>
+
+		<div data-role="content">
+
+			<h3>Make up your ROCK </h3>
+
+
+
+			<p>
+							<button onclick="capturePhoto();" data-inline="true">Photo</button><br>
+							<img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+							<div id="identifier"></div>
+				<input type="text" id="searchField" placeholder="tag it!">
+				<ul id="suggestions" data-role="listview" data-inset="true"></ul>
+			</p>
+
+			<p>
+				<button onclick="upload()">make!</button>
+			</p>
+
+		</div>
+
+	</div>
+
+	<script type="text/javascript" charset="utf-8">
+
+	/*
+	function upload()
+	{
+	
+	$.ajax({
+            url: "http://www.topgeo.de/muytest/receiver.php",
+            data: {tag: $('#searchField').val()},
+            dataType: "json",
+            type: "POST",
+            timeout: 5000,
+            success: function(data, status){
+                //data loaded
+                alert(data.response);
+            },
+            error: function(){
+                //error loading data
+                alert('no data');
+            }
+        });
+	
+	}
+	*/
+
+		$("#mainPage").bind("pageshow", function(e) {
+                var jetzt = new Date();
+               identifier=jetzt.getTime();
+               document.getElementById("identifier").innerHTML=identifier;
+
+			$("#searchField").autocomplete({
+				target: $('#suggestions'),
+				source: 'http://www.topgeo.de/muytest/suggestion.php?collection=rocks&term='+$('#searchField').val(),
+				callback: function(e) {
+					var $a = $(e.currentTarget);
+					$('#searchField').val($a.text());
+					$("#searchField").autocomplete('clear');
+				},
+				link: 'target.html?term=',
+				minLength: 1
+			});
+						
+			
+		});
+	</script>
+
+</body>  
 </html>
