--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			</p>
 
 			<p>
-				<button onclick="upload()">make!</button>
+				<button onclick="uploadPhoto()">make!</button>
 			</p>
 
 		</div>
