--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         	var params = {};
         	params.tag1 = $('#searchField').val();
-        	params.value2 = "param";
+        	params.objID = identifier;
 
         	options.params = params;
 
